refactor(swarmlog): run ES without docker
as ES in docker still unstable till now, so I suggest to run it without docker.
Simple auth method is also changed, as is also unstable when es-container crashed in overlay network.

Add:
ES install without docker howto

Changed:
Caddy config
ES port
Kibana port

--- a/filebeat/bin/Caddyfile
+++ b/filebeat/bin/Caddyfile
@@ -1,6 +1,6 @@
 :5601 {
     basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / logs-kibana:5601 {
+    proxy / 127.0.0.1:5001 {
             transparent
         }
 
@@ -10,7 +10,7 @@
 
 :9200 {
     basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / logs-es1:9200 {
+    proxy / 10.200.3.101:5002 {
             transparent
         }
 
